Renamed portrait image to 'tall' for consistent semantics

--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -386,7 +386,7 @@ article {
 	&.wide {
 		grid-gap: 0;
 	}
-	&.portrait { /* Posts with a portrait orientation main image such as photo posts */
+	&.tall { /* Posts with a portrait orientation main image such as photo posts */
 		display: grid;
 		grid-template-columns: minmax(320px, 720px) minmax(320px, 1fr);
 		grid-template-areas:
