Working work page, updates and cleanup on others

--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -557,6 +557,7 @@ nav, .controls {
 	}
 	& a {
 		text-decoration: none;
+		text-transform: capitalize;
 		color: var(--heading-color);
 		display: flex;
 		align-items: center;
@@ -624,6 +625,7 @@ footer {
 			margin-right: var(--m);
 			color: var(--text-color);
 			border-bottom: 1px solid var(--brand-color);
+			text-transform: capitalize;
 			&:hover {
 				color: var(--heading-color);
 				border-bottom: 1px solid;
