--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -255,6 +255,7 @@ nav, main {
 	margin: auto;
 	padding-left: 32px;
 	padding-right: 32px;
+	margin-bottom: var(--l);
 }
 nav, main, footer {
 	@media(max-width: 840px) {
@@ -309,8 +310,11 @@ article {
 	}
 	& figure,
 	& figure img,
-	& figure video {
+	& figure video
+	{
+		width: 100%;
 		max-width: 1280px;
+		height: auto;
 	}
 	& .cover {
 		grid-column: ~'1 / 3';
@@ -323,11 +327,15 @@ article {
 		display: flex;
 		object-fit: cover;
 		background-color: var(--light-gray-color);
-		& img {
-			height: 100%;
-			width: auto;
-			object-fit: contain;
-			margin: 0 auto;
+		& figure {
+			display: flex;
+			flex-direction: column;
+			& img {
+				margin: auto;
+				object-fit: contain;
+				margin: 0 auto;
+				height: 100%;
+			}
 		}
 	}
 	& a.cover:hover {
@@ -371,9 +379,20 @@ article {
 	& .wide { /* Places the element across both columns */
 		grid-column: ~'1 / 3';
 		position: relative;
-		& img {
+		& figure {
+			max-width: 1280px;
+			display: flex;
+			flex-direction: column;
+			& img {
 			width: 100%;
+			max-width: 1280px;
 			height: auto;
+			object-fit: contain;
+			}
+			& figcaption {
+				margin-top: var(--m);
+				margin-left: var(--m);
+			}
 		}
 	}
 	& img.wide {
@@ -406,9 +425,14 @@ article {
 			object-fit: contain;
 			max-height: none;
 			margin-bottom: 0;
-			& img {
-				width: 100%;
-				height: auto;
+			& figure {
+				max-width: 1280px;
+				img {
+					width: 100%;
+					max-width: 1280px;
+					height: auto;
+					object-fit: contain;
+				}
 			}
 		}
 		& .post-body {
@@ -423,9 +447,19 @@ article {
 		& .wide {
 			margin-top: var(--l);
 			margin-bottom: var(--l);
+			& figure {
+				margin-top: var(--l);
+				margin-bottom: var(--l);
+			}
 		}
 		& header + .col-2 {
 			margin-top: 0;
+		}
+		& p {
+			margin-left: var(--l);
+			&.post-meta {
+				margin-left: 0;
+			}
 		}
 	}
 }
@@ -438,6 +472,7 @@ article {
 		color: var(--meta-color);
 		text-decoration-color: var(--meta-color);
 		text-decoration-thickness: 1px;
+		margin-right: var(--xs);
 		&:hover {
 			color: var(--text-color);
 			text-decoration-color: var(--brand-color);
@@ -597,6 +632,14 @@ nav, .controls {
 		}
 	}
 }
+.pagenav {
+	& > * {
+		margin-right: var(--m);
+	}
+	& span {
+		opacity: 0.5;
+	}
+}
 footer {
 	min-height: 200px;
 	font-size: var(--text-s);
@@ -730,7 +773,9 @@ pre {
 	display: inline-block;
 }
 
-
 video {
 	max-width: 1216px;
 }
+
+.m-left--xs {margin-left: var(--xs);}
+.m-right--xs {margin-right: var(--xs);}
