--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -545,7 +545,7 @@ article {
 		grid-column-start: 2;
 		grid-column-end: 3;
 		padding: 0;
-		& a {
+		& a, span {
 			background-color: var(--light-gray-color);
 		}
 	}
