--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -368,7 +368,6 @@ article {
 		width: 100%;
 		max-width: 1280px;
 		height: auto;
-		min-height: 300px; // Helps prevent *some* layout flickering.
 	}
 	& .cover {
 		grid-column: ~'1 / 3';
@@ -381,15 +380,12 @@ article {
 		display: flex;
 		object-fit: cover;
 		background-color: var(--light-gray-color);
-		& figure {
-			display: flex;
-			flex-direction: column;
 			& img {
 				margin: auto;
-				object-fit: contain;
+				object-fit: cover;
 				margin: 0 auto;
-				height: 100%;
-			}
+				height: auto;
+				width: 100%;
 		}
 	}
 	& a.cover:hover {
@@ -511,6 +507,9 @@ article {
 		}
 		& p {
 			margin-left: var(--l);
+			@media(max-width: 840px) {
+				margin-left: 0;
+			}
 			&.post-meta {
 				margin-left: 0;
 			}
