--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -362,14 +362,14 @@ article {
 		display: block;
 	}
 	& figure,
-	& figure img,
 	& figure video
 	{
 		width: 100%;
 		max-width: 1280px;
 		height: auto;
 	}
-	& .cover {
+	& .cover,
+	& figure.cover {
 		grid-column: ~'1 / 3';
 		grid-row: ~'1 / 2';
 		width: 100%;
@@ -380,15 +380,17 @@ article {
 		display: flex;
 		object-fit: cover;
 		background-color: var(--light-gray-color);
-			& img {
-				margin: auto;
-				object-fit: cover;
-				margin: 0 auto;
-				height: auto;
-				width: 100%;
+		& img {
+			margin: auto;
+			object-fit: cover;
+			margin: 0 auto;
+			height: 100%;
+			width: auto;
+			max-width: 100%;
 		}
 	}
-	& a.cover:hover {
+	& a.cover:hover,
+	& a .cover:hover {
 		box-shadow: 0px 4px 0px var(--brand-color);
 		transition: all var(--slow);
 	}
@@ -426,18 +428,14 @@ article {
 			}
 		}
 	}
-	& .wide { /* Places the element across both columns */
+	&.wide,
+	&.wide > * { /* Places the element across both columns */
 		grid-column: ~'1 / 3';
 		position: relative;
 		& figure {
-			max-width: 1280px;
-			display: flex;
-			flex-direction: column;
+
 			& img {
-			width: 100%;
-			max-width: 1280px;
-			height: auto;
-			object-fit: contain;
+
 			}
 			& figcaption {
 				margin-top: var(--m);
@@ -500,6 +498,11 @@ article {
 			& figure {
 				margin-top: var(--l);
 				margin-bottom: var(--l);
+			}
+		}
+		& .cover {
+			& img {
+				width: 100%;
 			}
 		}
 		& header + .col-2 {
@@ -768,7 +771,7 @@ a[target="_blank"]::after {
 	font-size: 80%;
 	margin-left: var(--xs);
 	display: inline-block;
-	transform: rotate(90deg);
+	transform: rotate(-90deg);
 }
 @keyframes spin {
     from {transform:rotate(0deg);}
