--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -381,9 +381,11 @@ article {
 		height: auto;
 	}
 	& .cover,
-	& figure.cover {
+	& figure.cover,
+	& .cover figure {
 		grid-column: ~'1 / 3';
 		grid-row: ~'1 / 2';
+		height: 100%;
 		max-height: 520px;
 		margin-bottom: var(--m);
 		display: flex;
