--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -313,20 +313,32 @@ main.play {
 	& .thumbs {
 		margin-bottom: var(--xl);
 		& article {
-			height: 300px;
+			height: 340px;
 			margin: 0 var(--m) var(--m) 0;
+			& a img {
+				max-width: 100%;
+				height: auto;
+				max-height: 100%;
+			}
 			&:hover {
 				& img {
 					transform: scale(1.01);
 				}
 			}
 		}
+		@media(max-width: 640px) {
+			flex-direction: column;
+			& article {
+				height: auto;
+			}
+		}
 	}
+
 	& article.post {
 			& figure {
 				grid-column: ~'1 / 3';
 				grid-row: ~'1 / 2';
-				max-height: 800px;
+				max-height: 640px;
 				height: auto;
 				width: 100%;
 				margin-bottom: 0;
@@ -486,6 +498,7 @@ article {
 			margin-bottom: 0;
 			& figure {
 				max-width: 1280px;
+				max-height: none;
 				img {
 					width: 100%;
 					max-width: 1280px;
