--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -213,8 +213,8 @@ a {
 	}
 }
 a.cover:hover,
-a .cover:hover,
-.work a:hover figure img {
+a:hover figure.cover,
+a:hover img {
 		box-shadow: 0px 4px 0px var(--brand-color);
 		transition: all var(--slow);
 }
@@ -573,7 +573,7 @@ article {
 		}
 	}
 }
-.work, .photo {
+.work {
 	& .cover-grid div {
 		margin-top: var(--l);
 		margin-bottom: var(--l);
@@ -586,6 +586,7 @@ article {
 					width: 100%;
 					height: 100%;
 					object-fit: cover;
+					display: block;
 				}
 			}
 			& p {
