Updated some Work projects

--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -546,7 +546,7 @@ article {
 		& header + .col-2 {
 			margin-top: 0;
 		}
-		& p {
+		& p, & h2 {
 			margin-left: var(--l);
 			@media(max-width: 840px) {
 				margin-left: 0;
