--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -660,7 +660,13 @@ article {
 		grid-column-end: 3;
 		padding: 0;
 		& a, span {
+			display: flex;
+			align-items: center;
+			justify-content: center;
 			background-color: var(--light-gray-color);
+		}
+		& span {
+			opacity: 0.5;
 		}
 	}
 	& div.image {
