Updated single photo navigation styles

--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -670,8 +670,12 @@ article {
 				background-color: var(--brand-color);
 			}
 		}
-		& span, & span:hover {
+		& span {
 			opacity: 0.5;
+			&:hover {
+				opacity: 0.5;
+				background-color: #f9f8f3;
+			}
 		}
 	}
 	& div.image {
