--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -405,7 +405,6 @@ article {
 		grid-row: ~'1 / 2';
 		height: 100%;
 		max-height: 520px;
-		margin-bottom: var(--m);
 		display: flex;
 		object-fit: cover;
 		background-color: var(--light-gray-color);
@@ -416,7 +415,12 @@ article {
 			height: 100%;
 			width: auto;
 			max-width: 100%;
-			@media(max-width: 640px) {
+			margin-bottom: -7px; /* Counter an unexplained bottom gap between container and image */
+
+		}
+		@media(max-width: 840px) {
+			display: block;
+			& img {
 				height: auto;
 			}
 		}
@@ -513,6 +517,11 @@ article {
 					width: 100%;
 					max-width: 1280px;
 					object-fit: cover;
+				}
+				@media(max-width: 840px) {
+					& img {
+						height: 100%;
+					}
 				}
 			}
 		}
