Larger type for page descriptions.

--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -303,6 +303,9 @@ main.work {
 		margin-bottom: var(--l);
 		padding-bottom: var(--l);
 		border-bottom: 1px solid var(--light-gray-color);
+		& p {
+			font-size: var(--text-l);
+		}
 	}
 	& article header {
 		margin-bottom: 0;
