More specific CSS for targeting just page descriptions

--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -303,7 +303,7 @@ main.work {
 		margin-bottom: var(--l);
 		padding-bottom: var(--l);
 		border-bottom: 1px solid var(--light-gray-color);
-		& p {
+		& h1+p {
 			font-size: var(--text-l);
 		}
 	}
