removed top margin from blockquotes

--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -230,6 +230,7 @@ blockquote {
 	transform: translateX(-16px);
 	& p {
 		margin-bottom: var(--s);
+		margin-bottom: 0;
 		font-size: var(--text-l);
 	}
 	& p > a {
