Show more than 3 latest notes on the homepage

--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -294,6 +294,9 @@ main.about { /* homepage layout */
 		}
 		& section {
 			grid-area: col-2;
+			& ul li:last-of-type{
+				padding-top: var(--s);
+			}
 		}
 	}
 }
