Tweaked vertical spacing of headers on small screens

--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -290,6 +290,9 @@ main.about { /* homepage layout */
 				@media(max-width: 840px) {
 					margin-top: initial;
 				}
+				@media(max-width: 480px) {
+					margin-top: 3rem;
+				}
 			}
 		}
 		& section {
