Usable vertical space on small screens between links in pagenav

--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -811,6 +811,8 @@ nav, .controls {
 .pagenav {
 	& > * {
 		margin-right: var(--l);
+		margin-bottom: var(--l);
+		display: inline-block;
 	}
 	& span {
 		opacity: 0.5;
