Added text wrap balancing to headings.

--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -123,6 +123,7 @@ h1, h2, h3, h4, h5 {
 	font-family: 'prospectus';
 	line-height: 1.1;
 	max-width: 64ch;
+	text-wrap: balance;
 	margin-bottom: 0.6rem;
 	color: var(--heading-color);
 	& a {
